@@ -3,7 +3,11 @@ CHANGES IN VERSION 2.7.9
 
 NEW FEATURES
 
+   o Update for capture Hi-C. New variable CAPTURE_TARGET allowing to restrict the analysis to the captured region(s)
+
 SIGNIFICANT USER-VISIBLE CHANGES
+
+   o Exit with an error if the restriction fragment file is set but not found. In the previous version, HiC-Pro automatically switched to DNAse mode.
 
 BUG FIXES
 
